--- a/Server/package.json
+++ b/Server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ClaferMooViz",
-  "description": "A web-based GUI for Pareto front visualizer and explorer.",
-  "version": "0.3.2",
+  "description": "A web-based GUI for visualization and exploration of a set of non-dominated optimal variants.",
+  "version": "0.3.3",
   "private": true,
   "dependencies": {
     "express": "3.0.4"
