--- a/Server/package.json
+++ b/Server/package.json
@@ -2,6 +2,7 @@
   "name": "ClaferMooVisualizer",
   "description": "A web-based GUI for visualization and optimization of optimal variants",
   "version": "0.3.5",
+  "release_date": "??-??-????",
   "private": true,
   "dependencies": {
     "express": "3.0.4",
