--- a/Server/package.json
+++ b/Server/package.json
@@ -2,7 +2,7 @@
   "name": "ClaferMooVisualizer",
   "description": "A web-based GUI for visualization and optimization of optimal variants",
   "version": "0.3.5",
-  "release_date": "??-??-????",
+  "release_date": "15-01-2014",
   "private": true,
   "dependencies": {
     "express": "3.0.4",
