--- a/Server/package.json
+++ b/Server/package.json
@@ -1,8 +1,8 @@
 {
   "name": "ClaferMooVisualizer",
   "description": "A web-based GUI for visualization and exploration of optimal variants",
-  "version": "0.3.10",
-  "release_date": "01-05-2015",
+  "version": "0.4.1",
+  "release_date": "2015-09.21",
   "private": true,
   "dependencies": {
     "express": "3.20.1",
